# Resume-Genie

./: README.md  ai career coach.ipynb  cover letter generator.ipynb  main.py  pyproject.toml  requirement.txt  resume vs jd.ipynb  resume_checker.ipynb  resume_checker.py
app/: __init__.py  app.py  config.py  parsers.py  prompts.py  services.py  ui.py
